# VERSE

./: .gitignore  README.md  README.txt  build_matlab_mex.m  build_python_lib.sh  build_verse.sh  exampleminsarverse.m  minsarverse_matlab.m  minsarverse_matlab_simpler.m  minsarverse_mex.c  mintverse.m  mintverse_matlab.m  mintverse_mex.c  pyproject.toml  test_verse_pypulseq.py  verse.c  verse_pypulseq.py  verse_python.py
c/: verse.c  verse.h
examples/matlab/: exampleminsarverse.m  examplemintverse.m  gensinc.m
examples/python/: verse_pypulseq.py
matlab/: minsarverse.m  minsarverse_c.m  minsarverse_mex.c  mintverse.m  mintverse_c.m  mintverse_mex.c
matlab/archive/: minsarverse_matlab.m
python/: pyverse_c.py  pyverse_pulseq.py
