[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyverse"
version = "0.1.0"
description = "VERSE (Variable-rate Selective Excitation) implementation for python"
authors = [
    {name = "Joseph G. Woods", email = "joseph dot woods at unibe dot ch"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pypulseq",
]

[tool.setuptools]
py-modules = ["pyverse_pulseq", "pyverse_c"]
package-dir = {"" = "python"}